style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
  color: #6b1a22;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 15px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #a35766;
  color: #ecdbc9;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

@media (min-width: 480px) {
  .group {
    display: flex;
    flex-direction: row;
  }
  
  .item {
    flex: 1;
    margin: 10px;
  }
  
  .item-double {
    flex: 2;
  }
}


/* -------  Navigation ------- */

header {
  background-color: #83092e;
  padding: 20px 20px 0 20px;
  text-align: center;
}

.logo {
  font-family: "Tangerine", cursive;
  font-size: 72px;
  color: #ecdbc9;
}

header nav ul {
  display: flex;
  justify-content: center;
  padding: 0px 0 20px 0;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #ecdbc9;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li:last-of-type a {
  padding: 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

#join h2 {
  padding-top: 10px;
}

/* -------  Join Form ------- */
form {
  border: 2px solid #6b1a22;
  padding: 10px;
  margin: 0 auto;
  width: 92.5%;
}

form div {
  display: flex;
  justify-content: space-between;
}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #83092e;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

/* -------  Footer ------- */

footer {
  background-color: #83092e;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
@media all and (min-width: 480px) {
  header {
    display: flex;
    justify-content: space-between;
  }

  .logo {
    font-size: 34px;
    margin-bottom: 15px;
    padding: 0;
  }

  header nav ul {
    padding: 0;
    margin-top: 10px;
    font-size: 14px;
  }

  #join h2 {
    font-size: 20px;
  }
  #join .item {
    align-self: center;
  }
  form {
    width: inherit;
  }
  form label {
    font-size: 14px;
    padding-right: 10px;
  }
  form input, form select {
    width: inherit;
  }

  #about p {
    font-size: 14px;
    padding: 10px 20px;
  }
}

